--- a/views/home.html
+++ b/views/home.html
@@ -20,12 +20,9 @@
         <img src="/img/intro.png" />
       </div>
       <div>
-        <p>
-          A woman-led design studio to empower dreamers, risk-takers, ambitious entrepreneurs and people who want to change the world.
-        </p>
-        <p>
-          Based in India. Working globally.
-        </p>
+        <h1>
+          A woman-led design studio that offers brand building services to empower dreamers, risk-takers, ambitious entrepreneurs, and resolute brands ready to change the world.<br><br>Based in India. Working globally.
+        </h1>
         <a class="button btn-primary">
           See More
         </a>
@@ -44,7 +41,7 @@
       </div>
       <div>
         <div class="service-list-container">
-          <p>Branding</p>
+          <h3>BRANDING</h3>
           <ul>
             <li>Strategy</li>
             <li>Market Research</li>
@@ -55,7 +52,7 @@
           </ul>
         </div>
         <div class="service-list-container">
-          <p>Website</p>
+          <h3>WEBSITE</h3>
           <ul>
             <li>Design</li>
             <li>Development</li>
@@ -65,7 +62,7 @@
           </ul>
         </div>
         <div class="service-list-container">
-          <p>Social Media</p>
+          <h3>SOCIAL MEDIA</h3>
           <ul>
             <li>Content Strategy</li>
             <li>Design</li>
@@ -87,8 +84,7 @@
           <div
             class="portfolio-hover"
           >
-            <p>/ coming soon /</p>
-            <p>Client Name</p>
+            <h3>CLIENT NAME</h3>
             <p>Industry or Services</p>
           </div>
           <img
@@ -99,8 +95,7 @@
           <div
             class="portfolio-hover"
           >
-            <p>/ coming soon /</p>
-            <p>Client Name</p>
+            <h3>CLIENT NAME</h3>
             <p>Industry or Services</p>
           </div>
           <img
@@ -111,8 +106,7 @@
           <div
             class="portfolio-hover"
           >
-            <p>/ coming soon /</p>
-            <p>Client Name</p>
+            <h3>CLIENT NAME</h3>
             <p>Industry or Services</p>
           </div>
           <img
@@ -123,8 +117,7 @@
           <div
             class="portfolio-hover"
           >
-            <p>/ coming soon /</p>
-            <p>Client Name</p>
+            <h3>CLIENT NAME</h3>
             <p>Industry or Services</p>
           </div>
           <img
@@ -135,8 +128,7 @@
           <div
             class="portfolio-hover"
           >
-            <p>/ coming soon /</p>
-            <p>Client Name</p>
+            <h3>CLIENT NAME</h3>
             <p>Industry or Services</p>
           </div>
           <img
@@ -147,8 +139,7 @@
           <div
             class="portfolio-hover"
           >
-            <p>/ coming soon /</p>
-            <p>Client Name</p>
+            <h3>CLIENT NAME</h3>
             <p>Industry or Services</p>
           </div>
           <img
@@ -167,7 +158,7 @@
     <section
       class="testimonials"
     >
-      <p>Not to brag but...</p>
+      <h2>Not to brag but...</h2>
       <div class='container'>
         <div class='single-item'>
           <div class="slick-list testimonial-list-item">
@@ -217,7 +208,7 @@
     >
       <div>
         <div class="flex-row">
-          <h3>Hire Us</h3>
+          <h2>Hire Us</h2>
           <p>
             We're taking projects for 2022. Fill up the form and we'll get back to you in a jiffy!
           </p>
@@ -228,7 +219,7 @@
           class="input-row"
         >
           <input
-            placeholder="Your Name"
+            placeholder="Your Name & Pronouns"
           />
           <input
             placeholder="Your Email Address"
@@ -285,7 +276,7 @@
         </div>
         <div class="footer-form">
           <div>
-            <h3>Stay Connected</h3>
+            <h4>Stay Connected</h4>
             <p>Get dibs on new product, business & design tips.</p>
           </div>
           <div
