--- a/views/home.html
+++ b/views/home.html
@@ -153,7 +153,9 @@
       class="row-banner"
     >
       <div>
-        <p>See all our work</p>
+        <marquee>
+          <p>See all our work</p>
+        </marquee>
       </div>
     </section>
     <section
@@ -213,6 +215,7 @@
           <p>
             We're taking projects for 2022. Fill up the form and we'll get back to you in a jiffy!
           </p>
+          <img src="/img/hire-us.png" />
         </div>
       </div>
       <div>
