Updated UI consistency as per figma design

--- a/views/home.html
+++ b/views/home.html
@@ -166,11 +166,9 @@
         <div class='single-item'>
           <div class="slick-list testimonial-list-item">
             <div class="slick-item-container">
-              <div class="testimonial-left">
-                <img src="/img/testimonial.png" />
-              </div>
               <div class="testimonial-right">
-                <p>Name Here <span>/ Designation here</span></p>
+                <p>Name Here</p>
+                <p>Designation Here</p>
                 <p>
                   TCHC is a US-based pharma that is gearing up to launch multiple dietary supplement brands under one house to help us live our best life. PS : Because the project is still underway, please don’t share this project with anyone. Thanks! TCHC is a US-based pharma that is gearing up to launch multiple dietary supplement brands under one house to help us live our best life. PS : Because the project is still underway, please don’t share this project with anyone. Thanks!
                 </p>
@@ -179,11 +177,9 @@
           </div>
           <div class="slick-list testimonial-list-item">
             <div class="slick-item-container">
-              <div class="testimonial-left">
-                <img src="/img/testimonial.png" />
-              </div>
               <div class="testimonial-right">
-                <p>Name Here <span>/ Designation here</span></p>
+                <p>Name Here </p>
+                <p>Designation Here</p>
                 <p>
                   TCHC is a US-based pharma that is gearing up to launch multiple dietary supplement brands under one house to help us live our best life. PS : Because the project is still underway, please don’t share this project with anyone. Thanks! TCHC is a US-based pharma that is gearing up to launch multiple dietary supplement brands under one house to help us live our best life. PS : Because the project is still underway, please don’t share this project with anyone. Thanks!
                 </p>
@@ -192,11 +188,9 @@
           </div>
           <div class="slick-list testimonial-list-item">
             <div class="slick-item-container">
-              <div class="testimonial-left">
-                <img src="/img/testimonial.png" />
-              </div>
               <div class="testimonial-right">
                 <p>Name Here <span>/ Designation here</span></p>
+                <p>Designation Here</p>
                 <p>
                   TCHC is a US-based pharma that is gearing up to launch multiple dietary supplement brands under one house to help us live our best life. PS : Because the project is still underway, please don’t share this project with anyone. Thanks! TCHC is a US-based pharma that is gearing up to launch multiple dietary supplement brands under one house to help us live our best life. PS : Because the project is still underway, please don’t share this project with anyone. Thanks!
                 </p>
@@ -204,6 +198,15 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section
+      class="row-banner"
+    >
+      <div>
+        <marquee>
+          <p>See all our work</p>
+        </marquee>
       </div>
     </section>
     <section
@@ -269,13 +272,15 @@
         </div>
         <div class="link-section">
           <a>Home</a>
+          <a>About</a>
           <a>Work</a>
           <a>Services</a>
         </div>
         <div class="link-section link-sec2">
-          <a>About</a>
+          <a>Pro-Bono Program</a>
           <a>Journal</a>
           <a>Contact</a>
+          <a>Privacy Policy</a>
         </div>
         <div class="footer-form">
           <div>
@@ -310,7 +315,7 @@
           dots: false,
           arrows: false,
           slidesToScroll: 1,
-          autoplay: true,
+          autoplay: false,
           autoplaySpeed: 2000,
         });
       });
