Portfolio section updated

--- a/views/home.html
+++ b/views/home.html
@@ -75,80 +75,7 @@
       </div>
 
     </section>
-    <section
-      id="portfolio"
-    >
-      <div
-        class="row-container"
-      >
-        <div>
-          <div
-            class="portfolio-hover"
-          >
-            <h3>CLIENT NAME</h3>
-            <p>Industry or Services</p>
-          </div>
-          <img
-            src="/img/project-1.png"
-          />
-        </div>
-        <div>
-          <div
-            class="portfolio-hover"
-          >
-            <h3>CLIENT NAME</h3>
-            <p>Industry or Services</p>
-          </div>
-          <img
-            src="/img/project-2.png"
-          />
-        </div>
-        <div>
-          <div
-            class="portfolio-hover"
-          >
-            <h3>CLIENT NAME</h3>
-            <p>Industry or Services</p>
-          </div>
-          <img
-            src="/img/project-1.png"
-          />
-        </div>
-        <div>
-          <div
-            class="portfolio-hover"
-          >
-            <h3>CLIENT NAME</h3>
-            <p>Industry or Services</p>
-          </div>
-          <img
-            src="/img/project-2.png"
-          />
-        </div>
-        <div>
-          <div
-            class="portfolio-hover"
-          >
-            <h3>CLIENT NAME</h3>
-            <p>Industry or Services</p>
-          </div>
-          <img
-            src="/img/project-1.png"
-          />
-        </div>
-        <div>
-          <div
-            class="portfolio-hover"
-          >
-            <h3>CLIENT NAME</h3>
-            <p>Industry or Services</p>
-          </div>
-          <img
-            src="/img/project-2.png"
-          />
-        </div>
-      </div>
-    </section>
+    <%- include("partials/projects.html") %>
     <section
       class="row-banner"
     >
