--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -7,13 +7,13 @@
 >
   <ul>
     <li>
-      <a>Home</a>
+      <a href="/">Home</a>
     </li>
     <li>
       <a>Work</a>
     </li>
     <li>
-      <a>About</a>
+      <a href="/about">About</a>
     </li>
     <li>
       <a>Journal</a>
