--- a/views/about.html
+++ b/views/about.html
@@ -30,7 +30,7 @@
     class="why-us"
   >
     <div class="heading-container">
-      <h2>Why Us?</h2>
+      <h2>You should choose us.</h2>
     </div>
     <div class="about-pointers">
       <div>
