Work page added | popup added | fixed some issues

--- a/views/partials/repeatedBanner.html
+++ b/views/partials/repeatedBanner.html
@@ -3,7 +3,11 @@
 >
   <div>
     <marquee>
-      <p><%= text %></p>
+      <p>
+        <% for(var i = 0; i < 100; i++) { %>
+          <%= text %>&nbsp; |&nbsp;
+        <% } %>
+      </p>
     </marquee>
   </div>
 </section>
