--- a/views/work.html
+++ b/views/work.html
@@ -78,7 +78,9 @@
               />
             </div>
             <a class="button btn-primary">
-              Submit
+              <span>
+                Submit
+              </span>
             </a>
           </div>
         </div>
