Share icons | load more button | next prev button | updated content

--- a/views/about.html
+++ b/views/about.html
@@ -18,7 +18,9 @@
       <img src="/img/about.png" />
       <div class="about-text">
         <h1 class="hide-xs">Hey you. It's nice to see you here.</h1>
-        <p>We're Add More Design, a woman-led design studio for ambitious, purposeful brands❣️ Everything we create is led by intention, strategy, and a whole lot of love. Here, we literally 'add more design' to help you reach your goals, to help your consumers make their lives better, to (hopefully) make the world better☀️ For us, the reason of why we're creating something is very important. We love working with people who are wired like that as well. We believe that reason and intent gets us to strategy-which helps make us provide better design services.</p>
+        <p>
+          We're a woman-led design studio for ambitious, purposeful brands❣️ Everything we create is led by intention, strategy, and a whole lot of love. Here, we literally 'add more design' to help you reach your goals, to help your consumers make their lives better, to (hopefully) make the world better☀️ For us, the reason why we're creating something is very important. We love working with people who are wired like that as well. We believe that reason and intent get us to strategy-which helps make us provide better design services.
+        </p>
         <a class="button btn-primary">
           Hire Us
         </a>
@@ -34,20 +36,28 @@
     </div>
     <div class="about-pointers">
       <div>
-        <h3 class="accordian-heading accordion-new">USP1</h3>
-        <p class="panel-new">We're Add More Design, a woman-led design studio for ambitious, purposeful brands❣️ Everything we create is led by intention, strategy, and a whole lot of love. Here, we literally 'add more design' to help you reach your goals, to help your consumers make their lives better, to (hopefully) make the world better☀️ For us, the reason of why we're creating something is very important. We love working with people who are wired like that as well. We believe that reason and intent gets us to strategy-which helps make us provide better design services.</p>
+        <h3 class="accordian-heading accordion-new">Boutique experience</h3>
+        <p class="panel-new">
+          We truly believe that every brand is different because you - the person behind that brand - are unique. We make everything about our services tailored to your brand to make sure that the YOU factor shines bright. Working with us is an immersive and personal experience, where our founder keeps up with you at every step of the way. We see you, we hear you, we work with and for you creating brands that you will be in love with.
+        </p>
       </div>
       <div>
-        <h3 class="accordian-heading accordion-new">USP1</h3>
-        <p class="panel-new">We're Add More Design, a woman-led design studio for ambitious, purposeful brands❣️ Everything we create is led by intention, strategy, and a whole lot of love. Here, we literally 'add more design' to help you reach your goals, to help your consumers make their lives better, to (hopefully) make the world better☀️ For us, the reason of why we're creating something is very important. We love working with people who are wired like that as well. We believe that reason and intent gets us to strategy-which helps make us provide better design services.</p>
+        <h3 class="accordian-heading accordion-new">Strong ethos</h3>
+        <p class="panel-new">
+          We do stuff that has a reason behind it. ‘Because everyone is doing it’ doesn’t cut it for us. We envision making way for better representation, to make design more accessible, to help create brands with strong core values, and to help us be more intentional in our lives. If you want to introduce something heartfelt into the world, we’d love to talk to you. Read about our brand ethos in detail here.
+        </p>
       </div>
       <div>
-        <h3 class="accordian-heading accordion-new">USP1</h3>
-        <p class="panel-new">We're Add More Design, a woman-led design studio for ambitious, purposeful brands❣️ Everything we create is led by intention, strategy, and a whole lot of love. Here, we literally 'add more design' to help you reach your goals, to help your consumers make their lives better, to (hopefully) make the world better☀️ For us, the reason of why we're creating something is very important. We love working with people who are wired like that as well. We believe that reason and intent gets us to strategy-which helps make us provide better design services.</p>
+        <h3 class="accordian-heading accordion-new">Diverse skillset</h3>
+        <p class="panel-new">
+          We take care of brand creation as a whole. Working with Add More Design means you don’t have to go hunting for photographers, copywriters, etc. separately. We have skilled professionals across creative verticals working with us as independent contractors.
+        </p>
       </div>
       <div>
-        <h3 class="accordian-heading accordion-new">USP1</h3>
-        <p class="panel-new">We're Add More Design, a woman-led design studio for ambitious, purposeful brands❣️ Everything we create is led by intention, strategy, and a whole lot of love. Here, we literally 'add more design' to help you reach your goals, to help your consumers make their lives better, to (hopefully) make the world better☀️ For us, the reason of why we're creating something is very important. We love working with people who are wired like that as well. We believe that reason and intent gets us to strategy-which helps make us provide better design services.</p>
+        <h3 class="accordian-heading accordion-new">To Suit Every Budget</h3>
+        <p class="panel-new">
+          While most of our services demand a decent investment, we also recognize that sometimes great ideas don't have heavy financial support and money shouldn't be a reason to not chase after your dreams. We offer quality services and payment options to businesses with small budgets to give you a strong start. On that note, check our Pro-Bono Program here.
+        </p>
       </div>
     </div>
   </section>
