--- a/views/home.html
+++ b/views/home.html
@@ -73,7 +73,8 @@
       </div>
 
     </section>
-    <%- include("partials/projects.html") %>
+    <%- include("partials/projects.html"),  { projects: projects } %>
+    
     <%- include("partials/repeatedBanner.html", { text: "See all our work" }) %>
     <section
       class="testimonials"
@@ -82,39 +83,31 @@
         <div class="testimonials-slider">
           <div class="slider-item">
             <div class="testimonial-right">
-              <h3>Name Here</h3>
-              <p class="designation noselect" >Designation Here</p>
+              <h3>Aaliya Kanuga</h3>
+              <p class="designation noselect" >Co-Founder, Bollycoin</p>
               <p class="noselect">
-                TCHC is a US-based pharma that is gearing up to launch multiple dietary supplement brands under one house to help us live our best life. PS : Because the project is still underway, please don’t share this project with anyone. Thanks! TCHC is a US-based pharma that is gearing up to launch multiple dietary supplement brands under one house to help us live our best life. PS : Because the project is still underway, please don’t share this project with anyone. Thanks!
+                “Working with Kumud was a breeze! She was very fast, organized, and efficient throughout the process. She took back all of our feedback and implemented it perfectly at every stage! We're glad to have had the opportunity to work with her and look forward to collaborating again in the future.”
               </p>
             </div>
           </div>
           
           <div class="slider-item">
             <div class="testimonial-right">
-              <h3>Name Here</h3>
-              <p class="designation noselect" >Designation Here</p>
+              <h3>Divya Napa</h3>
+              <p class="designation noselect" >Co-Founder, DNC</p>
               <p class="noselect">
-                TCHC is a US-based pharma that is gearing up to launch multiple dietary supplement brands under one house to help us live our best life. PS : Because the project is still underway, please don’t share this project with anyone. Thanks! TCHC is a US-based pharma that is gearing up to launch multiple dietary supplement brands under one house to help us live our best life. PS : Because the project is still underway, please don’t share this project with anyone. Thanks!
+                “One rarely comes across someone who is as creative and professional as Kumud. I have had the pleasure of working with Kumud on a few different projects and it has been a great experience. Kumud’s speed, attention to detail, and creativity are some of her greatest qualities as a designer. I have had the best time working with her on several projects. She is definitely someone I would approach for any new projects from my side and also someone I would highly recommend to others!”
               </p>
             </div>
           </div>
           
           <div class="slider-item">
             <div class="testimonial-right">
-              <h3>Name Here</h3>
-              <p class="designation noselect" >Designation Here</p>
+              <h3>Akhil Backliwal</h3>
+              <p class="designation noselect" >Co-Founder, Career Ahead</p>
               <p class="noselect">
-                TCHC is a US-based pharma that is gearing up to launch multiple dietary supplement brands under one house to help us live our best life. PS : Because the project is still underway, please don’t share this project with anyone. Thanks! TCHC is a US-based pharma that is gearing up to launch multiple dietary supplement brands under one house to help us live our best life. PS : Because the project is still underway, please don’t share this project with anyone. Thanks!
-              </p>
-            </div>
-          </div>
-          <div class="slider-item">
-            <div class="testimonial-right">
-              <h3>Name Here</h3>
-              <p class="designation noselect" >Designation Here</p>
-              <p class="noselect">
-                TCHC is a US-based pharma that is gearing up to launch multiple dietary supplement brands under one house to help us live our best life. PS : Because the project is still underway, please don’t share this project with anyone. Thanks! TCHC is a US-based pharma that is gearing up to launch multiple dietary supplement brands under one house to help us live our best life. PS : Because the project is still underway, please don’t share this project with anyone. Thanks!
+                “She listened to our ideas, asked questions about what we were trying to accomplish, and really made sure that she understood our goals before getting to work, and we were extremely pleased with the outcome.
+                We would absolutely recommend her to anyone and would definitely work with her again!”
               </p>
             </div>
           </div>
@@ -222,7 +215,7 @@
             gutter: 30
           },
           900: {
-            items: 3,
+            items: 2,
             edgePadding: 128,
             autoplay: true,
             autoplayTimeout: 2000
