--- a/views/partials/repeatedBanner.html
+++ b/views/partials/repeatedBanner.html
@@ -2,12 +2,10 @@
   class="row-banner"
 >
   <div>
-    <marquee>
-      <p>
-        <% for(var i = 0; i < 100; i++) { %>
-          <%= text %>&nbsp; |&nbsp;
-        <% } %>
-      </p>
-    </marquee>
+    <p class="marquee">
+      <% for(var i = 0; i < 100; i++) { %>
+        <%= text %>&nbsp; |&nbsp;
+      <% } %>
+    </p>
   </div>
 </section>
