--- a/views/work.html
+++ b/views/work.html
@@ -17,11 +17,11 @@
       </div>
       <div>
         <p>
-          We're Add More Design, a woman-led design studio for ambitious, purposeful brands❣️ Everything we create is led by intention, strategy, and a whole lot of love. Here, we literally 'add more design' to help you reach your goals, to help your consumers make their lives better, to (hopefully) make the world better☀️ For us, the reason of why we're creating something is very important. We love working with people who are wired like that as well. We believe that reason and intent gets us to strategy-which helps make us provide better design services.
+          Welcome to our work showcase. Here we share some of the recent work that we’ve done i.e. the recent work that we remembered to upload 😅 Anyway, take a scroll and feast your eyes. We offer branding, visual direction, packaging, social media marketing, website design, and more (phew!) More projects launching soon! Like what you see? Hire us!
         </p>
       </div>
     </section>
-    <%- include("partials/projects.html") %>
+    <%- include("partials/projects.html"), { projects: projects } %>
     <section
       class="banner-section"
     >
